# GEN_AI_Protokoll

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  restart_db.sh  restart_docker.sh  restart_local_server.sh  restart_servers.sh  test_backend.py  test_server.py
.github/workflows/: CD.yml  CI.yml  python-package.yml
backend/Entities/: Annotation.py  AudioTranscript.py  Recording.py  __init__.py
backend/rest/: ProtocolHandler.py  ProtocolServer.py
backend/utils/: Annotation.py  AudioTranscript.py  DataBaseConnection.py  FunctionTool.py  OpenAIClient.py  Recording.py  TextTranscript.py  __init__.py
src/rest/: ProtocolHandler.py  ProtocolServer.py  wsgi.py
src/utils/: Annotation.py  AudioTranscript.py  DataBaseConnection.py  FunctionTool.py  OpenAIClient.py  Recording.py  TextTranscript.py  __init__.py
test/: test.py
tests/: conftest.py  docker-compose.yml  test_annotation.py  test_audio_transcript.py  test_databse_connection.py  test_function_tool.py  test_recording.py  test_text_transcript.py
